// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VSelect should escape items in menu 1`] = `

<div class="list__tile__title">
  &lt;strong&gt;foo&lt;/strong&gt;
</div>

`;

exports[`VSelect should escape items in menu 2`] = `

<div class="list__tile__title">
  &lt;
  <span class="list__tile__mask">
    str
  </span>
  ong&gt;foo&lt;/strong&gt;
</div>

`;

exports[`VSelect should render buttons correctly when using items array with segmented prop 1`] = `

<div tabindex="0"
     data-uid="34"
     role="combobox"
     class="input-group input-group--dirty input-group--append-icon input-group--text-field input-group--select input-group--segmented input-group--single-line primary--text"
>
  <div class="input-group__input">
    <div class="input-group__selections"
         style="overflow: hidden;"
    >
      <button type="button"
              class="btn btn--flat"
              data-ripple="true"
      >
        <div class="btn__content">
          Hello
        </div>
      </button>
      <input disabled="disabled"
             tabindex="-1"
             class="input-group--select__autocomplete"
             style="display: none;"
      >
    </div>
    <div class="menu"
         style="display: inline-block;"
    >
      <div class="menu__content menu__content--select  menu__content--dropdown"
           style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; z-index: 0; display: none;"
      >
        <div class="card"
             style="height: auto;"
             data-ripple="false"
        >
          <ul class="list">
            <li>
              <a class="list__tile list__tile--link list__tile--active primary--text"
                 data-ripple="true"
              >
                <div class="list__tile__content">
                  <div class="list__tile__title">
                    Hello
                  </div>
                </div>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <i aria-hidden="true"
       class="material-icons icon input-group__append-icon input-group__icon-cb"
       style="font-size: 24px;"
    >
      arrow_drop_down
    </i>
  </div>
  <div class="input-group__details">
    <!---->
  </div>
</div>

`;

exports[`VSelect should render buttons correctly when using slot with segmented prop 1`] = `

<div tabindex="0"
     data-uid="44"
     role="combobox"
     class="input-group input-group--dirty input-group--append-icon input-group--text-field input-group--select input-group--segmented input-group--single-line primary--text"
>
  <div class="input-group__input">
    <div class="input-group__selections"
         style="overflow: hidden;"
    >
      <div>
        Hello
      </div>
      <input disabled="disabled"
             tabindex="-1"
             class="input-group--select__autocomplete"
             style="display: none;"
      >
    </div>
    <div class="menu"
         style="display: inline-block;"
    >
      <div class="menu__content menu__content--select  menu__content--dropdown"
           style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; z-index: 0; display: none;"
      >
        <div class="card"
             style="height: auto;"
             data-ripple="false"
        >
          <ul class="list">
            <li>
              <a class="list__tile list__tile--link list__tile--active primary--text"
                 data-ripple="true"
              >
                <div class="list__tile__content">
                  <div class="list__tile__title">
                    Hello
                  </div>
                </div>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <i aria-hidden="true"
       class="material-icons icon input-group__append-icon input-group__icon-cb"
       style="font-size: 24px;"
    >
      arrow_drop_down
    </i>
  </div>
  <div class="input-group__details">
    <!---->
  </div>
</div>

`;
